--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,56 @@
                     </div>
             </div>
         </div>
+
+        <!-- Section Services Home -->
+        <div class="grid grid-cols-12 items-center mt-20">
+            <div class="col-span-3">
+                <hr>
+            </div>
+            <div>
+                <span class="flex h-3 w-3 col-span-1">
+                    <span class="animate-ping absolute inline-flex h-3 w-3 rounded-full bg-white opacity-75"></span>
+                    <span class="relative inline-flex rounded-full h-3 w-3 bg-white"></span>
+                </span>
+            </div>
+            <div class="col-span-2 text-left">
+                <h2 class="text-white font-bold text-[24px] ml-[-70px]">What are We doin' ?</h2>
+            </div>
+        </div>
+        <div class="container mx-auto px-9 py-4 mt-4">
+            <div class="grid grid-cols-3 gap-10">
+                <div class="service-1 text-center items-center" style="text-align: -webkit-center;">
+                    <img src="img/difw.png" alt="" class="h-24 w-24">
+                    <h3 class="text-white font-bold mt-6 mb-3 text-xl">Service 1</h3>
+                    <p class="text-white text-justify mb-6">tellus. Sed nec laoreet nisl. Donec cursus, sapien a semper suscipit, enim dolor 
+                        porttitor sapien, nec facilisis massa leo id tellus. Ut eu magna finibus, pulvinar est 
+                        id, varius nibh. Curabitur ut tempor velit. Suspendisse congue, lorem a tincidunt 
+                        iaculis,
+                    </p>
+                    <button class="bg-white rounded-full text-[12px] px-3 py-2 font-bold hover:bg-gray-300">Learn More!</button>
+                </div>
+                <div class="service-1 text-center items-center" style="text-align: -webkit-center;">
+                    <img src="img/difw.png" alt="" class="h-24 w-24">
+                    <h3 class="text-white font-bold mt-6 mb-3 text-xl">Service 2</h3>
+                    <p class="text-white text-justify mb-6">tellus. Sed nec laoreet nisl. Donec cursus, sapien a semper suscipit, enim dolor 
+                        porttitor sapien, nec facilisis massa leo id tellus. Ut eu magna finibus, pulvinar est 
+                        id, varius nibh. Curabitur ut tempor velit. Suspendisse congue, lorem a tincidunt 
+                        iaculis,
+                    </p>
+                    <button class="bg-white rounded-full text-[12px] px-3 py-2 font-bold hover:bg-gray-300">Learn More!</button>
+                </div>
+                <div class="service-1 text-center items-center" style="text-align: -webkit-center;">
+                    <img src="img/difw.png" alt="" class="h-24 w-24">
+                    <h3 class="text-white font-bold mt-6 mb-3 text-xl">Service 3</h3>
+                    <p class="text-white text-justify mb-6">tellus. Sed nec laoreet nisl. Donec cursus, sapien a semper suscipit, enim dolor 
+                        porttitor sapien, nec facilisis massa leo id tellus. Ut eu magna finibus, pulvinar est 
+                        id, varius nibh. Curabitur ut tempor velit. Suspendisse congue, lorem a tincidunt 
+                        iaculis,
+                    </p>
+                    <button class="bg-white rounded-full text-[12px] px-3 py-2 font-bold hover:bg-gray-300">Learn More!</button>
+                </div>  
+            </div>
+        </div>
     </section> 
 </body>
 </html>
