--- a/src/index.html
+++ b/src/index.html
@@ -200,7 +200,14 @@
             </div>
         </div>
         <div class="container mx-auto px-9 py-4 mt-4">
-            
+            <div class="grid grid-cols-12 items-center gap-10">
+                <div class="col-span-6">
+                    <input type="text" name="firstName" id="f_name" class="w-full rounded px-5 h-8" placeholder="First Name">
+                </div>
+                <div class="col-span-6">
+                    <input type="text" name="lastName" id="l_name" class="w-full rounded px-5 h-8" placeholder="Last Name">
+                </div>
+            </div>
         </div>
     </section> 
 </body>
