--- a/src/index.html
+++ b/src/index.html
@@ -266,16 +266,23 @@
                     </a>
                     <p class="mt-4 text-sm leading-6">Vestibulum quis velit porta, ultricies urna sed, imperdiet velit. Phasellus ac tempor tellus. </p>
                 </div>
-                <div class="col-start-6">
-                    <div class="inline mx-auto">
-                        <span class="flex h-3 w-3 col-span-1">
+                <div class="col-start-6" style="text-align: -webkit-center;">
+                        <span class="flex h-3 w-3 col-span-1 relative top-[110px]">
                             <span class="animate-ping absolute inline-flex h-3 w-3 rounded-full bg-black opacity-75"></span>
                             <span class="relative inline-flex rounded-full h-3 w-3 bg-black"></span>
                         </span>
                         <div>
                             <div class="bg-black w-0.5 border-black h-28 border mt-[100%]"></div>
                         </div>
+                </div>
+                <div class="col-start-7" style="text-align: -webkit-center;">
+                    <div>
+                        <div class="bg-black w-0.5 border-black h-28 border mb-[100%]"></div>
                     </div>
+                    <span class="flex h-3 w-3 col-span-1 relative bottom-[110px]">
+                        <span class="animate-ping absolute inline-flex h-3 w-3 rounded-full bg-black opacity-75"></span>
+                        <span class="relative inline-flex rounded-full h-3 w-3 bg-black"></span>
+                    </span>
                 </div>
             </div>
         </div>
