Desktop Web Slicing 100%

--- a/src/index.html
+++ b/src/index.html
@@ -284,6 +284,76 @@
                         <span class="relative inline-flex rounded-full h-3 w-3 bg-black"></span>
                     </span>
                 </div>
+
+                <div class="col-start-9 col-span-4">
+                    <div class="grid grid-cols-4 items-center h-[100%]">
+
+                        <!-- About Footer -->
+                        <div class="col-start-2 text-center font-bold hover:text-gray-400 mr-[-11em]">
+                            <a href="#">
+                                <p>About</p>
+                            </a>
+                        </div>
+                        <div class="menu-footer col-start-3">
+                            <span class="flex h-3 w-3 col-span-1 ml-auto">
+                                <span class="animate-ping absolute inline-flex h-3 w-3 rounded-full bg-black opacity-75"></span>
+                                <span class="relative inline-flex rounded-full h-3 w-3 bg-black"></span>
+                            </span>
+                        </div>
+                        <div class="col-start-4 mr-[-35px]">
+                            <hr class="bg-black border border-black">
+                        </div>
+
+                        <!-- Services Footer -->
+                        <div class="col-start-1 text-center font-bold hover:text-gray-400 mr-[-11em]">
+                            <a href="#">
+                                <p>Services</p>
+                            </a>
+                        </div>
+                        <div class="menu-footer col-start-2">
+                            <span class="flex h-3 w-3 col-span-1 ml-auto">
+                                <span class="animate-ping absolute inline-flex h-3 w-3 rounded-full bg-black opacity-75"></span>
+                                <span class="relative inline-flex rounded-full h-3 w-3 bg-black"></span>
+                            </span>
+                        </div>
+                        <div class="col-start-3 mr-[-8.4em]">
+                            <hr class="bg-black border border-black">
+                        </div>
+
+                        <!-- Portfolio Footer -->
+                        <div class="col-start-2 text-center font-bold hover:text-gray-400 mr-[-11em]">
+                            <a href="#">
+                                <p>Portfolio</p>
+                            </a>
+                        </div>
+                        <div class="menu-footer col-start-3">
+                            <span class="flex h-3 w-3 col-span-1 ml-auto">
+                                <span class="animate-ping absolute inline-flex h-3 w-3 rounded-full bg-black opacity-75"></span>
+                                <span class="relative inline-flex rounded-full h-3 w-3 bg-black"></span>
+                            </span>
+                        </div>
+                        <div class="col-start-4 mr-[-35px]">
+                            <hr class="bg-black border border-black">
+                        </div>
+
+                        <!-- Contact Footer -->
+                        <div class="col-start-1 text-center font-bold hover:text-gray-400 mr-[-11em]">
+                            <a href="#">
+                                <p>Contact</p>
+                            </a>
+                        </div>
+                        <div class="menu-footer col-start-2">
+                            <span class="flex h-3 w-3 col-span-1 ml-auto">
+                                <span class="animate-ping absolute inline-flex h-3 w-3 rounded-full bg-black opacity-75"></span>
+                                <span class="relative inline-flex rounded-full h-3 w-3 bg-black"></span>
+                            </span>
+                        </div>
+                        <div class="col-start-3 mr-[-8.4em]">
+                            <hr class="bg-black border border-black">
+                        </div>
+                    </div>
+                    
+                </div>
             </div>
         </div>
     </footer>
